--- a/express/natours/package.json
+++ b/express/natours/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "slugify": "^1.6.6"
   }
 }
