--- a/express/natours/package.json
+++ b/express/natours/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.15.15"
   }
 }
