--- a/express/natours/package.json
+++ b/express/natours/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "srinivas",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "slugify": "^1.6.6",
