--- a/express/natours/package.json
+++ b/express/natours/package.json
@@ -11,6 +11,7 @@
   },
   "author": "srinivas",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.5.0",
     "eslint": "^8.57.1",
