--- a/express/natours/package.json
+++ b/express/natours/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
