fix: update PORT in config.env from 3001 to 3000

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,4 @@ adv-js/fs-module.js
 my-backend-app/src/index.js
 my-backend-app/src/index.js
 express/natours/config.env
+express/natours/config.env
