feat: implement password reset functionality with email notifications

--- a/express/natours/config.env
+++ b/express/natours/config.env
@@ -3,3 +3,7 @@ PORT=3000
 CONNECTION_STRING=mongodb+srv://srinivas:1V6gBQFiexFk65rQ@nextjs.l8ppp.mongodb.net/natours?retryWrites=true&w=majority&appName=nextjs
 JWT_SECRET=a-string-secret-at-least-256-bits-long
 JWT_EXPIRES=30d
+EMAIL_USERNAME=api
+EMAIL_PASSWORD=63694cac9e693d53ec5fadfa14965fa0
+EMAIL_HOST=live.smtp.mailtrap.io
+EMAIL_PORT=587
