--- a/express/natours/package.json
+++ b/express/natours/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "ndb": "^1.1.5",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "slugify": "^1.6.6",
